--- a/code_base/python/datamerge_final.ipynb
+++ b/code_base/python/datamerge_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,13 @@
     "import meteostat as ms\n",
     "import os\n",
     "import io\n",
-    "import json"
+    "import json\n",
+    "from geopy import distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_closest(lat, long):\n",
+    "    if lat == 0 or long == 0:\n",
+    "        return 'No Lat/Long', 999999\n",
+    "    else:\n",
+    "        try:\n",
+    "            input_latlong = (long,lat)\n",
+    "            #distance_list = []\n",
+    "            pdf = stations_df.copy()\n",
+    "            pdf['distance'] = pdf.apply(lambda x: distance.distance(input_latlong, (x.LONGITUDE,x.LATITUDE)).miles, axis=1)\n",
+    "            nearest_station = pdf.iloc[pdf['distance'].idxmin()]\n",
+    "            #print(nearest_station)\n",
+    "            return nearest_station['ADDRESS'], nearest_station['distance']\n",
+    "            \"\"\"for row in POLICE_DF.iterrows():\n",
+    "                distance_holder = {}\n",
+    "                station_latlong = [row['LATITUDE'], row['LONGITUDE']]\n",
+    "                distance_holder['station'] = row['ADDRESS']\n",
+    "                distance_holder['distance'] = distance.distance(input_latlong, station_latlong).miles\n",
+    "\n",
+    "                distance_list.append(distance_holder)\n",
+    "                distance_df = pd.DataFrame(distance_list)\n",
+    "                nearest_station = distance_df.iloc[distance_df['distance'].idxmin()]\n",
+    "                print(f\"{distance_df.head()}\")\n",
+    "                return nearest_station['station'], nearest_station['distance'] \"\"\"\n",
+    "        except Exception as e:\n",
+    "            #print(e)\n",
+    "            return 'Error something something', 999999"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +220,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,29 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'dty'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_33204\\1584267471.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgrouped_complaints_by_commarea\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdty\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\Users\\tkkim\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6200\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6201\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6202\u001b[0m         ):\n\u001b[0;32m   6203\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6204\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'dty'"
-     ]
-    }
-   ],
-   "source": [
-    "grouped_complaints_by_commarea.dty"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,25 +281,6 @@
     "weather_df['date'] = pd.to_datetime(weather_df['date']).dt.date\n",
     "big_df['date'] = pd.to_datetime(big_df['date']).dt.date\n",
     "big_df = big_df.merge(weather_df, how='left', on='date')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 199,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# merge dph env complaints\n",
-    "big_df = big_df.merge(grouped_complaints_by_commarea, how='left', on=['date','community_area'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 201,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "big_df = big_df.merge(pivoted,how='left', on=['date', 'community_area'])"
    ]
   }
  ],
